# v2apiCodeHub

./: .gitignore  README.md  index.html  package.json  vite.config.ts
docs/: mvp.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: clients.ts  desktop.ts  profiles.ts  url.ts  v2api.ts
