[package]
name = "v2api-code-hub"
version = "0.1.0"
description = "Desktop companion for connecting AI coding clients to v2api"
authors = ["YourOrganization"]
edition = "2021"

[lib]
name = "v2api_code_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

